# django-router

./: .flake8  .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  run-tests.yml
django_router/management/commands/: router_list.py
testing/core/: settings.py
testing/test_app/: tests.py  views.py
tests/: manage.py
tests/core/: settings.py  urls.py
tests/test_app/: models.py  tests.py  views.py
tests/test_app/submod/: views.py
