[tool.poetry]
name = "django-router"
version = "1.0.3"
description = "Use simple decorators on views instead of maintaining lengthy urls.py"
authors = ["Real-Gecko <alexandrbezenkov@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{ include = "django_router" }]
homepage = "https://github.com/Real-Gecko/django-router"

[tool.poetry.dependencies]
python = ">=3.4"

[tool.poetry.group.test.dependencies]
django = ">=2.0"
django-extensions = "*"
coverage = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
float_to_top = true
