[project]
name = "django-router"
version = "1.0.8"
description = "Use simple decorators on views instead of maintaining lengthy urls.py"
authors = [{ name = "RealGecko", email = "alexandrbezenkov@gmail.com" }]
dependencies = ["django>=3.2.25"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "BSD-3-Clause" }

[tool.uv]
dev-dependencies = [
    "coverage>=7.2.7",
    "django-extensions>=3.2.3",
    "tox-uv>=1.13.0",
    "tox>=4.8.0",
]
